[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=1]
[ext_resource path="res://scripts/Titan.gd" type="Script" id=2]
[ext_resource path="res://sounds/alva_invasion.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/alva_demuele.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/alva_fin.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/alva_retirada.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 51.0392

[sub_resource type="CircleShape2D" id=5]
radius = 129.769

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Cuerpo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/PieL1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 33, -13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Imagen/PieR1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -35, -11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Imagen/PieL2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 24 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Imagen/PieR2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -28, 26 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Imagen/Cuerpo/Bruja:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, -84 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Imagen/Cuerpo/Bruja:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Imagen/Cuerpo/Bruja:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Cuerpo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -48 ), Vector2( 0, -40 ), Vector2( 0, -48 ), Vector2( 0, -56 ), Vector2( 0, -48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/PieL1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 33, -13 ), Vector2( 33, -13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Imagen/PieR1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -35, -11 ), Vector2( -35, -11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Imagen/PieL2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 24 ), Vector2( 24, 24 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Imagen/PieR2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -28, 26 ), Vector2( -28, 26 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Imagen/Cuerpo/Bruja:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Imagen/Cuerpo/Bruja:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -5.0, 0.0, 5.0, 0.0, -5.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Imagen/Cuerpo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -48 ), Vector2( 0, -40 ), Vector2( 0, -48 ), Vector2( 0, -56 ), Vector2( 0, -48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Imagen/PieL1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 33, -13 ), Vector2( 33, -19 ), Vector2( 33, -13 ), Vector2( 33, -19 ), Vector2( 33, -13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Imagen/PieR1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -35, -17 ), Vector2( -35, -11 ), Vector2( -35, -17 ), Vector2( -35, -11 ), Vector2( -35, -17 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Imagen/PieL2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 18 ), Vector2( 24, 24 ), Vector2( 24, 18 ), Vector2( 24, 24 ), Vector2( 24, 18 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Imagen/PieR2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -28, 26 ), Vector2( -28, 20 ), Vector2( -28, 26 ), Vector2( -28, 20 ), Vector2( -28, 26 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Imagen/Cuerpo/Bruja:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Imagen/Cuerpo/Bruja:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -5.0, 0.0, 5.0, 0.0, -5.0 ]
}

[node name="Titan" type="Node2D" groups=["enemigo", "monster", "titan"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Movil" type="Area2D" parent="."]
collision_layer = 3138
collision_mask = 3
input_pickable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Movil"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Vigia" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Vigia"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="." groups=["imagen"]]
__meta__ = {
"_edit_lock_": true
}

[node name="PieL1" type="Sprite" parent="Imagen"]
position = Vector2( 33, -13 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 20
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="PieR1" type="Sprite" parent="Imagen"]
position = Vector2( -35, -11 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 20
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="PieL2" type="Sprite" parent="Imagen"]
position = Vector2( 24, 24 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 20
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="PieR2" type="Sprite" parent="Imagen"]
position = Vector2( -28, 26 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 20
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Cuerpo" type="Sprite" parent="Imagen"]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 19
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Bruja" type="Sprite" parent="Imagen/Cuerpo"]
position = Vector2( 3, -84 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 21
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Fin" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin1" type="Node2D" parent="Fin"]
__meta__ = {
"_edit_lock_": true
}

[node name="Fin2" type="Node2D" parent="Fin"]
position = Vector2( -27, -20 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin3" type="Node2D" parent="Fin"]
position = Vector2( -32, 28 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin4" type="Node2D" parent="Fin"]
position = Vector2( 21, -19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fin5" type="Node2D" parent="Fin"]
position = Vector2( 34, 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="Anima" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Errar" type="Timer" parent="."]
one_shot = true

[node name="Embestida" type="Timer" parent="."]
one_shot = true

[node name="StitanInvasion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0
bus = "GranVoz"

[node name="StitanDemolision" type="AudioStreamPlayer2D" parent="." groups=["sonido", "supersonido"]]
stream = ExtResource( 4 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="StitanRetirada" type="AudioStreamPlayer2D" parent="." groups=["sonido", "supersonido"]]
stream = ExtResource( 6 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[node name="StitanFin" type="AudioStreamPlayer2D" parent="." groups=["sonido", "supersonido"]]
stream = ExtResource( 5 )
bus = "BusEfectos"
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="Movil" to="." method="_on_Movil_area_entered"]
[connection signal="area_exited" from="Movil" to="." method="_on_Movil_area_exited"]
[connection signal="area_entered" from="Vigia" to="." method="_on_Vigia_area_entered"]
[connection signal="area_exited" from="Vigia" to="." method="_on_Vigia_area_exited"]
[connection signal="timeout" from="Errar" to="." method="_on_Errar_timeout"]
